--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,17 @@
-*.egg
-*.egg-info
+/.eggs
+/.installed.cfg
+/.tox
+/bin
+/develop-eggs
+/dist
+/eggs
+/include
+/lib
+/local
+/parts
+/pip-selfcheck.json
+/setuptools-*
+.*.sw?
 *.pyc
-.*
-bin
-build
-develop-eggs
-dist
-parts
-setuptools-*
-whoami.txt
-!.gitignore
+*.pyo
+*.egg-info
